--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -37,5 +37,7 @@ L'écoulement est instationnaire de 0 jusqu'à t=14, après lequel l'écoulement
 ****** Remarques sur le [[maillage]]
 ******* Certes, le 2eme et 3eme maillage ont un temps de calcul très important. Mais ils n'ont pas apporté des résultats très différents. Donc on peut conclure qu'un nombre d'élément = 17000 suffit pour un cas de calcul aussi simple.
 ******* En raffinant, l'écoulement devient toujours stationnaire en t=14.
+*****
+$$Re=100$$ On observe un détachement tourbillonaire
 ****
 ***
