--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -38,6 +38,7 @@ L'écoulement est instationnaire de 0 jusqu'à t=14, après lequel l'écoulement
 ******* Certes, le 2eme et 3eme maillage ont un temps de calcul très important. Mais ils n'ont pas apporté des résultats très différents. Donc on peut conclure qu'un nombre d'élément = 17000 suffit pour un cas de calcul aussi simple.
 ******* En raffinant, l'écoulement devient toujours stationnaire en t=14.
 *****
-$$Re=100$$ On observe un détachement tourbillonaire
+$$Re=100$$ On observe un détachement tourbillonnaire et des allées de tourbillons de von Karman
+*****
 ****
 ***
