--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -21,10 +21,12 @@ $$Re=40$$ Tourbillons à l'arrière du cylindre.
 Rq: il y a plus de tourbillons en bas de la ligne centrale qu'en haut, i.e. perte de symétrie
 ****** Remarques sur l'instationnalité avec _simpleFoam_:
 ******* Ce problème est en réalité instationnaire, mais on constate que les résultats numérique avec le solver stationnaire ont un sens physique. Seulement les tourbillons sont moins nombreux qu'avec solver instationnaire, voir ci-dessous.
-******* TODO On va faire les mêmes comparaisons pour un cas de Re=100.
+******* DONE On va faire les mêmes comparaisons pour un cas de Re=100.
 :PROPERTIES:
 :todo: 1610895950312
+:done: 1610898788166
 :END:
+*******
 **** écoulement instationnaire avec _pimpleFoam_. Au bout de 40 secondes, je mesure toutes les 2 secondes mais le calcul se fait toutes les 0,001 secondes:
 *****
 $$Re=1$$ Le résultat n'a pas sens physique, ça indique que le problèm est mal posé.
