Logseq auto save

--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -26,7 +26,7 @@ Rq: il y a plus de tourbillons en bas de la ligne centrale qu'en haut, i.e. pert
 :todo: 1610895950312
 :done: 1610898788166
 :END:
-********
+******** Conclusion:
 **** écoulement instationnaire avec _pimpleFoam_. Au bout de 40 secondes, je mesure toutes les 2 secondes mais le calcul se fait toutes les 0,001 secondes:
 *****
 $$Re=1$$ Le résultat n'a pas sens physique, ça indique que le problèm est mal posé.
