--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -20,7 +20,7 @@ Résultat très resemblable que Re=1.
 $$Re=40$$ Tourbillons à l'arrière du cylindre. 
 Rq: il y a plus de tourbillons en bas de la ligne centrale qu'en haut, i.e. perte de symétrie
 ****** Remarques sur l'instationnalité avec _simpleFoam_:
-******* Ce problème est en réalité instationnaire, mais on constate que les résultats numérique avec le solver stationnaire ont un sens physique. Seulement les tourbillons sont moins nombreux qu'avec solver instationnaire, voir ci-dessous.
+******* Ce problème est en réalité instationnaire, mais on constate que les résultats numérique avec le solver stationnaire ont un sens physique. Seulement les tourbillons sont moins nombreux qu'avec solver instationnaire, voir ci-dessous. Donc on peut
 ******* DONE On va faire les mêmes comparaisons pour un cas de Re=100.
 :PROPERTIES:
 :todo: 1610895950312
